<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon" />

    <!-- Welcome user greeting -->
    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:text="@string/textViewGreeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />

    <!-- Message to user -->
    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="16sp"
        android:text="@string/textViewMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreeting" />

    <!-- Input username field -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/editTextUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <!-- Input password field -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <!-- Forgot password -->
    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="125dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/textViewForgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <!-- Login button -->
    <Button
        android:id="@+id/buttonLogin"
        android:onClick="login"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/buttonLogin"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewForgot" />

    <!-- Register button -->
    <Button
        android:id="@+id/buttonRegister"
        android:onClick="register"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/buttonRegister"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>